--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Second repo </title>
 </head>
 <body>
-    
+    <h1>My second website </h1>
+    <h2>change code</h2>
 </body>
 </html>
