--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Second repo </title>
+    <title> Document</title>
 </head>
 <body>
     <h1>My second website </h1>
     <h2>change code</h2>
+    <div>
+        <h3>New Blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum quidem molestias voluptatem quia iste expedita facilis eos officiis, accusamus eveniet aperiam quasi excepturi voluptatibus doloremque mollitia. Consequuntur a, quas numquam quia qui quo asperiores porro quos libero explicabo saepe dolorum.</p>
+    </div>
     <img src="moon.jpg" alt="">
 
 
